samples/task/invalid/R31.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><choices><p>Not a choice</p></choices></step></steps>
  </taskbody>
</task>